<resources>
    <string name="app_name">bvma</string>
    <string name="deal">Deal</string>
    <string name="retailer">Retailer</string>
    <string name="location">Location</string>
    <string name="cat_code">Category</string>
    <string name="item">Item</string>
    <string name="original_price">Original Price</string>
    <string name="discount_price">Discount Price</string>
    <string name="percentage">Percentage</string>
    <string name="units">Units</string>
    <string name="quantity">Quantity</string>
    <string name="effective_date">Effective Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="active">Active</string>
    <string name="count_of_views">Views</string>
    <string name="description">Description</string>
</resources>
